update my homework

--- a/index.html
+++ b/index.html
@@ -8,53 +8,65 @@
 </head>
 <body>
     <header>
-        <a href="#">WebStudio</a>
-         <h1>Головне</h1>
+        <h1><a href="#">WebStudio</a></h1>
          <nav>
-         <a href="#">Студия</a>
-         <img src="./images/finger1.svg" width="13" height="16" alt="finger">
-         <a href="#">Портфолио</a>
-         <a href="#">Контакти</a>
-        </nav>
+             <ul>
+                 <li><a href="#">Студия</a></li>
+                 <li><a href="#">Портфолио</a></li>
+                 <li><a href="#">Контакти</a></li>
+         </nav>
+             </ul>
              <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-             <img src="./images/finger1.svg" width="13" height="16" alt="finger">
              <a href="tel:+380961111111">+38(096)111-11-11</a>
     </header>
     <main>
-        <h2>ЕФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h2>
-        <button>Заказать услугу</button>
+        <section><h2>ЕФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h2>
+            <button type="button">Заказать услугу</button>
         <h2>Особености</h2>
-          <ul>
-            <li>внимание к деталям Идейные соображения, а также начало повседневной работы по формированию позиции.</li>
-            <li>пунктуальность Задача организации, в особености же рамки и место обучения кадров влечет за собой.</li>
-            <li>планирование Равним образом консультация с широким активом в значительной степени обуслалвивает.</li>
-            <li>современные технолоогии Значимость этих проблем настолько очевидна, что реализация планових заданий</li>
-        </ul>
+          <section><ul>
+            <li><h3>внимание к деталям</h3> 
+                <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+            </li>
+            <li>
+                <h3>пунктуальность</h3><p>Задача организации, в особености же рамки и место обучения кадров влечет за собой.</p>
+            </li>
+            <li>
+                <h3>планирование</h3><p>Равним образом консультация с широким активом в значительной степени обуслалвивает.</p>
+            </li>
+            <li>
+                <h3>современные технолоогии</h3><p>Значимость этих проблем настолько очевидна, что реализация планових заданий.</p>
+            </li>
+        </ul></section>
         <h2>Чем мы занимаемся</h2>
-        <img src="./images/desktop.svg" width="370" height="295" alt="">
-        <img src="./images/phone.svg"  width="370" height="295" alt="">
-        <img src="./images/colors.svg"  width="370" height="295" alt="">
-        <h2>наша команда</h2>
-             <img src="./images/igor.jpg" width="270" height="260" alt="Igor Dem`janenko">
+        <ul>
+            <li><img src="./images/desktop1.jpg" width="370" height="295" alt=""></li>
+            <li><img src="./images/phone1.jpg"  width="370" height="295" alt=""></li>
+            <li><img src="./images/colors1.jpg"  width="370" height="295" alt=""></li>
+        </ul>
+        <section><h2>наша команда</h2>
+             
              <ul>
-                 <li>Игорь Демьяненко</li>
-                 <li>Product Designer</li>
-             </ul>
-             <img src="./images/olga.jpg" width="270" height="260" alt="Ol`ga Repina">
-             <ul>
-                 <li>Ольга Репина</li>
-                 <li>Frontend Developer</li>
-             </ul>
-             <img src="./images/nikolaj.jpg" width="270" height="260" alt="Nikolaj Tarasov">
-             <ul>
-                 <li>Николай Тарасов</li>
-                 <li>Marketing</li>
-             </ul>
-             <img src="./images/mikhail.jpg" width="270" height="260" alt="Mikhail Ermakov">
-             <ul>
-                 <li>Михаил Ермаков</li>
-                 <li>UI Designer</li>
-             </ul>
+                 <li>
+                     <img src="./images/igor.jpg" width="270" height="260" alt="Igor Dem`janenko">
+                    <h4>Игорь Демьяненко</h4>
+                    <p>Product Designer</p>
+                </li>
+                 <li>
+                     <img src="./images/olga.jpg" width="270" height="260" alt="Ol`ga Repina">
+                    <h4>Ольга Репина</h4>
+                    <p>Frontend Developer</p>
+                </li>
+                 <li>
+                    <img src="./images/nikolaj.jpg" width="270" height="260" alt="Nikolaj Tarasov">
+                    <h4>Николай Тарасов</h4>
+                    <p>Marketing</p>
+                 </li>
+                 <li>
+                    <img src="./images/mikhail.jpg" width="270" height="260" alt="Mikhail Ermakov">
+                    <h4>Михаил Ермаков</h4>
+                    <p>UI Designer</p>
+                 </li>   
+             </ul></section>
     </main>
     <footer>
         <a href="#">WebStudio</a>
