--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@
 </head>
 <body>
     <header>
-        <h1><a href="#">WebStudio</a></h1>
-         <nav>
-             <ul>
-                 <li><a href="#">Студия</a></li>
-                 <li><a href="#">Портфолио</a></li>
-                 <li><a href="#">Контакти</a></li>
-         </nav>
-             </ul>
-             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-             <a href="tel:+380961111111">+38(096)111-11-11</a>
+                <a href="#">WebStudio</a>
+            <nav>
+                <ul>
+                    <li><a href="#">Студия</a></li>
+                    <li><a href="#">Портфолио</a></li>
+                    <li><a href="#">Контакти</a></li>
+                </ul>    
+            </nav>                
+                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <a href="tel:+380961111111">+38(096)111-11-11</a>
     </header>
     <main>
-        <section><h2>ЕФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h2>
+        <section><h1>ЕФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
             <button type="button">Заказать услугу</button>
         <h2>Особености</h2>
           <section><ul>
@@ -39,31 +39,31 @@
         </ul></section>
         <h2>Чем мы занимаемся</h2>
         <ul>
-            <li><img src="./images/desktop1.jpg" width="370" height="295" alt=""></li>
-            <li><img src="./images/phone1.jpg"  width="370" height="295" alt=""></li>
-            <li><img src="./images/colors1.jpg"  width="370" height="295" alt=""></li>
+            <li><img src="./images/desktop1.jpg" width="370" height="295" alt="Програмирование"></li>
+            <li><img src="./images/phone1.jpg"  width="370" height="295" alt="Дизайн"></li>
+            <li><img src="./images/colors1.jpg"  width="370" height="295" alt="Цветокоррекция"></li>
         </ul>
         <section><h2>наша команда</h2>
              
              <ul>
                  <li>
-                     <img src="./images/igor.jpg" width="270" height="260" alt="Igor Dem`janenko">
-                    <h4>Игорь Демьяненко</h4>
+                     <img src="./images/igor.jpg" width="270" height="260" alt="Игорь Демьяненко">
+                    <h3>Игорь Демьяненко</h3>
                     <p>Product Designer</p>
                 </li>
                  <li>
-                     <img src="./images/olga.jpg" width="270" height="260" alt="Ol`ga Repina">
-                    <h4>Ольга Репина</h4>
+                     <img src="./images/olga.jpg" width="270" height="260" alt="Ольга Репина">
+                    <h3>Ольга Репина</h3>
                     <p>Frontend Developer</p>
                 </li>
                  <li>
-                    <img src="./images/nikolaj.jpg" width="270" height="260" alt="Nikolaj Tarasov">
-                    <h4>Николай Тарасов</h4>
+                    <img src="./images/nikolaj.jpg" width="270" height="260" alt="Николай Тарасов">
+                    <h3>Николай Тарасов</h3>
                     <p>Marketing</p>
                  </li>
                  <li>
-                    <img src="./images/mikhail.jpg" width="270" height="260" alt="Mikhail Ermakov">
-                    <h4>Михаил Ермаков</h4>
+                    <img src="./images/mikhail.jpg" width="270" height="260" alt="Михаил Ермаков">
+                    <h3>Михаил Ермаков</h3>
                     <p>UI Designer</p>
                  </li>   
              </ul></section>
