--- a/index.html
+++ b/index.html
@@ -5,76 +5,90 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./CSS/styles.css">
 </head>
 <body>
     <header>
-                <a href="#">WebStudio</a>
+        <section>
+                <a href="#" class="logo">WebStudio</a>
             <nav>
                 <ul>
-                    <li><a href="#">Студия</a></li>
-                    <li><a href="#">Портфолио</a></li>
-                    <li><a href="#">Контакти</a></li>
+                    <li><a href="#" class="studia">Студия</a></li>
+                    <li><a href="#" class="portfolio">Портфолио</a></li>
+                    <li><a href="#" class="contacts">Контакти</a></li>
                 </ul>    
             </nav>                
-                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-                <a href="tel:+380961111111">+38(096)111-11-11</a>
+                <a href="mailto:info@devstudio.com" class="mail head">info@devstudio.com</a>
+                <a href="tel:+380961111111" class="tel head">+38(096)111-11-11</a>
+            </section>
     </header>
     <main>
-        <section><h1>ЕФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
-            <button type="button">Заказать услугу</button>
+        <section ><h1 class="face">ЕФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
+            <button class="button" type="button">Заказать услугу</button>
         <h2>Особености</h2>
-          <section><ul>
-            <li><h3>внимание к деталям</h3> 
-                <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
-            </li>
-            <li>
-                <h3>пунктуальность</h3><p>Задача организации, в особености же рамки и место обучения кадров влечет за собой.</p>
-            </li>
-            <li>
-                <h3>планирование</h3><p>Равним образом консультация с широким активом в значительной степени обуслалвивает.</p>
-            </li>
-            <li>
-                <h3>современные технолоогии</h3><p>Значимость этих проблем настолько очевидна, что реализация планових заданий.</p>
-            </li>
-        </ul></section>
-        <h2>Чем мы занимаемся</h2>
+        <section class="peculiarities">
+            <ul>
+                <li class="details">
+                    <h3 class="">Внимание к деталям</h3> 
+                    <p class="">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                </li>
+                <li class="punctuality">
+                    <h3 class="">Пунктуальность</h3>
+                    <p class="">Задача организации, в особености же рамки и место обучения кадров влечет за собой.</p>
+                </li>
+                <li class="planning">
+                    <h3 class="">Планирование</h3>
+                    <p class="">Равним образом консультация с широким активом в значительной степени обуслалвивает.</p>
+                </li>
+                <li class="modernity">
+                    <h3 class="">Современные технолоогии</h3>
+                    <p class="">Значимость этих проблем настолько очевидна, что реализация планових заданий.</p>
+                </li>
+            </ul>
+        </section>
+        <section>
+        <h2 class="our projects">Чем мы занимаемся</h2>
         <ul>
-            <li><img src="./images/desktop1.jpg" width="370" height="295" alt="Програмирование"></li>
-            <li><img src="./images/phone1.jpg"  width="370" height="295" alt="Дизайн"></li>
-            <li><img src="./images/colors1.jpg"  width="370" height="295" alt="Цветокоррекция"></li>
+            <li class="desktop"><img src="./images/desktop1.jpg" width="370" height="295" alt="Програмирование"></li>
+            <li class="phone"><img src="./images/phone1.jpg"  width="370" height="295" alt="Дизайн"></li>
+            <li class="colors"><img src="./images/colors1.jpg"  width="370" height="295" alt="Цветокоррекция"></li>
         </ul>
-        <section><h2>наша команда</h2>
-             
-             <ul>
-                 <li>
-                     <img src="./images/igor.jpg" width="270" height="260" alt="Игорь Демьяненко">
+        </section>
+            <section>
+                <h2>наша команда</h2>
+                <ul>
+                    <li>
+                    <img src="./images/igor.jpg" width="270" height="260" alt="Игорь Демьяненко">
                     <h3>Игорь Демьяненко</h3>
                     <p>Product Designer</p>
-                </li>
-                 <li>
-                     <img src="./images/olga.jpg" width="270" height="260" alt="Ольга Репина">
+                    </li>
+                    <li>
+                    <img src="./images/olga.jpg" width="270" height="260" alt="Ольга Репина">
                     <h3>Ольга Репина</h3>
                     <p>Frontend Developer</p>
-                </li>
-                 <li>
+                    </li>
+                    <li>
                     <img src="./images/nikolaj.jpg" width="270" height="260" alt="Николай Тарасов">
                     <h3>Николай Тарасов</h3>
                     <p>Marketing</p>
-                 </li>
-                 <li>
+                    </li>
+                    <li>
                     <img src="./images/mikhail.jpg" width="270" height="260" alt="Михаил Ермаков">
                     <h3>Михаил Ермаков</h3>
                     <p>UI Designer</p>
-                 </li>   
-             </ul></section>
+                    </li>   
+                </ul>
+            </section>
     </main>
     <footer>
+        <section>
         <a href="#">WebStudio</a>
         <address>
             <a href="mailto:info@example.com">info@devstudio.com</a>
             <a href="tel:+380991111111">+38(099)111-11-11</a>
             <a href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858">пр-т Леси Украинки, 26</a>            
         </address>
+        </section>
     </footer>
 </body>
 </html>
