--- a/portfolio.html
+++ b/portfolio.html
@@ -5,76 +5,88 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./CSS/styles.css">
 </head>
 <body>
-    <header>
-        <a href="#">WebStudio</a>
+    <header class="head">
+        <a href="https://dedterentiy.github.io/goit-markup-hw-01/" class="logo">WebStudio</a>
         <nav>
             <ul>
-                <li><a href="#">Студия</a></li>
-                <li><a href="#">Портфолио</a></li>
-                <li><a href="#">Контакти</a></li>
+                <li><a class="pages" href="https://dedterentiy.github.io/goit-markup-hw-01/">Студия</a></li>
+                <li><a class="pages" href="#">Портфолио</a></li>
+                <li><a class="pages" href="#">Контакти</a></li>
             </ul>    
         </nav>                
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <a href="tel:+380961111111">+38(096)111-11-11</a>
+            <a class="info" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="info" href="tel:+380961111111">+38(096)111-11-11</a>
     </header>
     <main>
         <section>
+            <h1>Все проекты</h1>
             <ul>
-            <li><button type="button">Все</button></li>     
-            <li><button type="button">Веб-сайты</button></li>
-            <li><button type="button">Приложения</button></li>
-            <li><button type="button">Дизайн</button</li>
-            <li><button type="button">Маркетинг</button></li>
+            <li>
+                <button class="portfolio" type="button">Все</button>
+            </li>     
+            <li>
+                <button class="portfolio" type="button">Веб-сайты</button>
+            </li>
+            <li>
+                <button class="portfolio" type="button">Приложения</button>
+            </li>
+            <li>
+                <button class="portfolio" type="button">Дизайн</button>
+            </li>
+            <li>
+                <button class="portfolio" type="button">Маркетинг</button>
+            </li>
             </ul> 
         </section>
         <section>
             <ul>
                 <li>
-                    <img src="./images/web.jpg" alt="">
+                    <img src="./images/web.jpg" width="370" height="295" alt="">
                     <h3>Технокряк</h3>
-                    <p>Веб-сайт</p>
+                    <p class="deteils-text">Веб-сайт</p>
                 </li>
                 <li>
-                    <img src="./images/poster.jpg" alt="">
+                    <img src="./images/poster.jpg" width="370" height="295" alt="">
                     <h3>Постер New Orlean vs Golden Star</h3>
-                    <p>Дизайн</p>
+                    <p class="deteils-text">Дизайн</p>
                 </li>
                  <li>
-                    <img src="./images/logo.jpg" alt="">
+                    <img src="./images/logo.jpg" width="370" height="295" alt="">
                     <h3>Ресторан Seafood</h3>
-                     <p>Приложение</p>
+                     <p class="deteils-text">Приложение</p>
                 </li>
                 <li>
-                    <img src="./images/projectprime.jpg" alt="">
+                    <img src="./images/projectprime.jpg" width="370" height="295" alt="">
                     <h3>Проект Prime</h3>
-                    <p>Маркетинг</p>
+                    <p class="deteils-text">Маркетинг</p>
                 </li>
                 <li>
-                    <img src="./images/projectboxes.jpg" alt="">
+                    <img src="./images/projectboxes.jpg" width="370" height="295" alt="">
                     <h3>Проект Boxes</h3>
-                    <p>Приложение</p>
+                    <p class="deteils-text">Приложение</p>
                 </li>
                 <li>
-                    <img src="./images/multinational.jpg" alt="">
+                    <img src="./images/multinational.jpg" width="370" height="295" alt="">
                     <h3>Inspiration has no Borders</h3>
-                    <p>Веб-сайт</p>
+                    <p class="deteils-text">Веб-сайт</p>
                 </li>
                  <li>
-                    <img src="./images/limitededition.jpg" alt="">
+                    <img src="./images/limitededition.jpg" width="370" height="295" alt="">
                     <h3>Издание Limited Edition</h3>
-                    <p>Дизайн</p>
+                    <p class="deteils-text">Дизайн</p>
                 </li>
                 <li>
-                    <img src="./images/projectlab.jpg" alt="">
+                    <img src="./images/projectlab.jpg" width="370" height="295" alt="">
                     <h3>Проект LAB</h3>
-                    <p>Маркетинг</p>
+                    <p class="deteils-text">Маркетинг</p>
                 </li>
                  <li>
-                    <img src="./images/busines.jpg" alt="">
+                    <img src="./images/busines.jpg" width="370" height="295" alt="">
                     <h3>Growing Business</h3>
-                    <p>Приложение</p>
+                    <p class="deteils-text">Приложение</p>
                 </li>
             </ul>
         </section>
