--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https: //fonts.googleapis.com/css2?family= Raleway:wght@700 & family = Roboto:wght@400;500;700;900 & display=swap" rel="stylesheet">
+    <link href="https: //fonts.googleapis.com/css2?family = Raleway:wght@700 & family = Roboto:wght@400;500;700;900 & display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./CSS/styles.css">
 </head>
-<body>
+<body class="body">
     <header class="head">
         <section>
-                <a href="https://dedterentiy.github.io/goit-markup-hw-01/" class="logo">WebStudio</a>
+                <a href="./index.html"class="logo">WebStudio</a>
             <nav>
                 <ul>
-                    <li><a class="pages" href="https://dedterentiy.github.io/goit-markup-hw-01/">Студия</a></li>
-                    <li><a class="pages" href="#">Портфолио</a></li>
+                    <li><a class="pages" href="./index.html">Студия</a></li>
+                    <li><a class="pages" href="./portfolio.html">Портфолио</a></li>
                     <li><a class="pages" href="#">Контакти</a></li>
                 </ul>    
             </nav>                
@@ -33,20 +33,20 @@
         <section class="peculiarities">
             <ul>
                 <li class="details">
-                    <h3 class="">Внимание к деталям</h3> 
-                    <p class="deteils-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                    <h3 class="peculiarities-title">Внимание к деталям</h3> 
+                    <p class="peculiarities-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
                 <li>
-                    <h3 class="punctuality">Пунктуальность</h3>
-                    <p class="deteils-text">Задача организации, в особености же рамки и место обучения кадров влечет за собой.</p>
+                    <h3 class="peculiarities-title">Пунктуальность</h3>
+                    <p class="peculiarities-text">Задача организации, в особености же рамки и место обучения кадров влечет за собой.</p>
                 </li>
                 <li>
-                    <h3 class="planning">Планирование</h3>
-                    <p class="deteils-text">Равним образом консультация с широким активом в значительной степени обуслалвивает.</p>
+                    <h3 class="peculiarities-title">Планирование</h3>
+                    <p class="peculiarities-text">Равним образом консультация с широким активом в значительной степени обуслалвивает.</p>
                 </li>
                 <li>
-                    <h3 class="modernity">Современные технолоогии</h3>
-                    <p class="deteils-text">Значимость этих проблем настолько очевидна, что реализация планових заданий.</p>
+                    <h3 class="peculiarities-title">Современные технолоогии</h3>
+                    <p class="peculiarities-text">Значимость этих проблем настолько очевидна, что реализация планових заданий.</p>
                 </li>
             </ul>
         </section>
@@ -59,7 +59,7 @@
         </ul>
         </section>
             <section>
-                <h2>наша команда</h2>
+                <h2 class="our-team">Наша команда</h2>
                 <ul>
                     <li>
                     <img src="./images/igor.jpg" width="270" height="260" alt="Игорь Демьяненко">
@@ -86,11 +86,13 @@
     </main>
     <footer>
         <section class="footer">
-        <a href="#" class="logo">WebStudio</a>
-        <address>
-            <a class="map" href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858">пр-т Леси Украинки, 26</a>            
-            <a class="contacts" href="mailto:info@example.com">info@devstudio.com</a>
-            <a class="contacts" href="tel:+380991111111">+38(099)111-11-11</a>
+        <a href="./index.html" class="logo">WebStudio</a>
+        <address class="address">
+            <ul>
+                <li><a class="map" href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858">пр-т Леси Украинки, 26</a></li>
+                <li><a class="contacts" href="mailto:info@example.com">info@devstudio.com</a></li>
+                <li><a class="contacts" href="tel:+380991111111">+38(099)111-11-11</a></li>
+            </ul>
         </address>
         </section>
     </footer>
