--- a/portfolio.html
+++ b/portfolio.html
@@ -7,12 +7,12 @@
     <title>Document</title>
     <link rel="stylesheet" href="./CSS/styles.css">
 </head>
-<body>
+<body class="body">
     <header class="head">
         <a href="https://dedterentiy.github.io/goit-markup-hw-01/" class="logo">WebStudio</a>
         <nav>
             <ul>
-                <li><a class="pages" href="https://dedterentiy.github.io/goit-markup-hw-01/">Студия</a></li>
+                <li><a class="pages" href="./index.html">Студия</a></li>
                 <li><a class="pages" href="#">Портфолио</a></li>
                 <li><a class="pages" href="#">Контакти</a></li>
             </ul>    
@@ -25,19 +25,19 @@
             <h1>Все проекты</h1>
             <ul>
             <li>
-                <button class="portfolio" type="button">Все</button>
+                <button class="portfolio-button" type="button">Все</button>
             </li>     
             <li>
-                <button class="portfolio" type="button">Веб-сайты</button>
+                <button class="portfolio-button" type="button">Веб-сайты</button>
             </li>
             <li>
-                <button class="portfolio" type="button">Приложения</button>
+                <button class="portfolio-button" type="button">Приложения</button>
             </li>
             <li>
-                <button class="portfolio" type="button">Дизайн</button>
+                <button class="portfolio-button" type="button">Дизайн</button>
             </li>
             <li>
-                <button class="portfolio" type="button">Маркетинг</button>
+                <button class="portfolio-button" type="button">Маркетинг</button>
             </li>
             </ul> 
         </section>
@@ -45,58 +45,60 @@
             <ul>
                 <li>
                     <img src="./images/web.jpg" width="370" height="295" alt="">
-                    <h3>Технокряк</h3>
+                    <h3 class="project-name">Технокряк</h3>
                     <p class="deteils-text">Веб-сайт</p>
                 </li>
                 <li>
                     <img src="./images/poster.jpg" width="370" height="295" alt="">
-                    <h3>Постер New Orlean vs Golden Star</h3>
+                    <h3 class="project-name">Постер New Orlean vs Golden Star</h3>
                     <p class="deteils-text">Дизайн</p>
                 </li>
                  <li>
                     <img src="./images/logo.jpg" width="370" height="295" alt="">
-                    <h3>Ресторан Seafood</h3>
+                    <h3 class="project-name">Ресторан Seafood</h3>
                      <p class="deteils-text">Приложение</p>
                 </li>
                 <li>
                     <img src="./images/projectprime.jpg" width="370" height="295" alt="">
-                    <h3>Проект Prime</h3>
+                    <h3 class="project-name">Проект Prime</h3>
                     <p class="deteils-text">Маркетинг</p>
                 </li>
                 <li>
                     <img src="./images/projectboxes.jpg" width="370" height="295" alt="">
-                    <h3>Проект Boxes</h3>
+                    <h3 class="project-name">Проект Boxes</h3>
                     <p class="deteils-text">Приложение</p>
                 </li>
                 <li>
                     <img src="./images/multinational.jpg" width="370" height="295" alt="">
-                    <h3>Inspiration has no Borders</h3>
+                    <h3 class="project-name">Inspiration has no Borders</h3>
                     <p class="deteils-text">Веб-сайт</p>
                 </li>
                  <li>
                     <img src="./images/limitededition.jpg" width="370" height="295" alt="">
-                    <h3>Издание Limited Edition</h3>
+                    <h3 class="project-name">Издание Limited Edition</h3>
                     <p class="deteils-text">Дизайн</p>
                 </li>
                 <li>
                     <img src="./images/projectlab.jpg" width="370" height="295" alt="">
-                    <h3>Проект LAB</h3>
+                    <h3 class="project-name">Проект LAB</h3>
                     <p class="deteils-text">Маркетинг</p>
                 </li>
                  <li>
                     <img src="./images/busines.jpg" width="370" height="295" alt="">
-                    <h3>Growing Business</h3>
+                    <h3 class="project-name">Growing Business</h3>
                     <p class="deteils-text">Приложение</p>
                 </li>
             </ul>
         </section>
     </main>
-    <footer>
-        <a href="#">WebStudio</a>
-        <address>
-            <a href="mailto:info@example.com">info@devstudio.com</a>
-            <a href="tel:+380991111111">+38(099)111-11-11</a>
-            <a href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858">пр-т Леси Украинки, 26</a>            
+    <footer class="footer">
+        <a  class="logo" href="#">WebStudio</a>
+        <address class="address">
+                <ul>
+                    <li><a class="map" href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858">пр-т Леси Украинки, 26</a></li>
+                    <li><a class="contacts" href="mailto:info@example.com">info@devstudio.com</a></li>
+                    <li><a class="contacts" href="tel:+380991111111">+38(099)111-11-11</a></li>
+                </ul>
         </address>
     </footer>
 </body>
