--- a/index.html
+++ b/index.html
@@ -4,16 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https: //fonts.googleapis.com/css2?family = Raleway:wght@700 & family = Roboto:wght@400;500;700;900 & display=swap" rel="stylesheet">
+    <title>WebStudio</title>
     <link rel="stylesheet" href="./CSS/styles.css">
 </head>
 <body class="body">
     <header class="head">
         <section>
-                <a href="./index.html"class="logo">WebStudio</a>
+                <a href="./index.html"class="logo">Web<span class="logo-word2">Studio</span></a>
             <nav>
                 <ul>
                     <li><a class="pages" href="./index.html">Студия</a></li>
@@ -26,10 +23,13 @@
             </section>
     </header>
     <main>
-        <section class="face"><h1>ЕФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
+        <section>
+            <span class="face">
+            <h1 class="title">ЕФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
             <button class="button" type="button">Заказать услугу</button>
+        </span>
         </section>
-        <h2>Особености</h2>
+        <h2 class="hide">Особености</h2>
         <section class="peculiarities">
             <ul>
                 <li class="details">
@@ -63,22 +63,22 @@
                 <ul>
                     <li>
                     <img src="./images/igor.jpg" width="270" height="260" alt="Игорь Демьяненко">
-                    <h3>Игорь Демьяненко</h3>
+                    <h3 class="name">Игорь Демьяненко</h3>
                     <p class="position">Product Designer</p>
                     </li>
                     <li>
                     <img src="./images/olga.jpg" width="270" height="260" alt="Ольга Репина">
-                    <h3>Ольга Репина</h3>
+                    <h3 class="name">Ольга Репина</h3>
                     <p class="position">Frontend Developer</p>
                     </li>
                     <li>
                     <img src="./images/nikolaj.jpg" width="270" height="260" alt="Николай Тарасов">
-                    <h3>Николай Тарасов</h3>
+                    <h3 class="name">Николай Тарасов</h3>
                     <p class="position">Marketing</p>
                     </li>
                     <li>
                     <img src="./images/mikhail.jpg" width="270" height="260" alt="Михаил Ермаков">
-                    <h3>Михаил Ермаков</h3>
+                    <h3 class="name">Михаил Ермаков</h3>
                     <p class="position">UI Designer</p>
                     </li>   
                 </ul>
@@ -86,7 +86,7 @@
     </main>
     <footer>
         <section class="footer">
-        <a href="./index.html" class="logo">WebStudio</a>
+        <a href="./index.html" class="logo">Web<span class="logo-word3">Studio</span></a>
         <address class="address">
             <ul>
                 <li><a class="map" href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858">пр-т Леси Украинки, 26</a></li>
