--- a/portfolio.html
+++ b/portfolio.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Портфолио</title>
     <link rel="stylesheet" href="./CSS/styles.css">
 </head>
 <body class="body">
     <header class="head">
-        <a href="https://dedterentiy.github.io/goit-markup-hw-01/" class="logo">WebStudio</a>
+        <a href="./index.html" class="logo">Web<span class="logo-word2">Studio</span></a>
         <nav>
             <ul>
                 <li><a class="pages" href="./index.html">Студия</a></li>
-                <li><a class="pages" href="#">Портфолио</a></li>
+                <li><a class="pages" href="./portfolio.html">Портфолио</a></li>
                 <li><a class="pages" href="#">Контакти</a></li>
             </ul>    
         </nav>                
@@ -40,59 +40,57 @@
                 <button class="portfolio-button" type="button">Маркетинг</button>
             </li>
             </ul> 
-        </section>
-        <section>
             <ul>
                 <li>
                     <img src="./images/web.jpg" width="370" height="295" alt="">
                     <h3 class="project-name">Технокряк</h3>
-                    <p class="deteils-text">Веб-сайт</p>
+                    <p class="project-text">Веб-сайт</p>
                 </li>
                 <li>
                     <img src="./images/poster.jpg" width="370" height="295" alt="">
                     <h3 class="project-name">Постер New Orlean vs Golden Star</h3>
-                    <p class="deteils-text">Дизайн</p>
+                    <p class="project-text">Дизайн</p>
                 </li>
                  <li>
                     <img src="./images/logo.jpg" width="370" height="295" alt="">
                     <h3 class="project-name">Ресторан Seafood</h3>
-                     <p class="deteils-text">Приложение</p>
+                    <p class="project-text">Приложение</p>
                 </li>
                 <li>
                     <img src="./images/projectprime.jpg" width="370" height="295" alt="">
                     <h3 class="project-name">Проект Prime</h3>
-                    <p class="deteils-text">Маркетинг</p>
+                    <p class="project-text">Маркетинг</p>
                 </li>
                 <li>
                     <img src="./images/projectboxes.jpg" width="370" height="295" alt="">
                     <h3 class="project-name">Проект Boxes</h3>
-                    <p class="deteils-text">Приложение</p>
+                    <p class="project-text">Приложение</p>
                 </li>
                 <li>
                     <img src="./images/multinational.jpg" width="370" height="295" alt="">
                     <h3 class="project-name">Inspiration has no Borders</h3>
-                    <p class="deteils-text">Веб-сайт</p>
+                    <p class="project-text">Веб-сайт</p>
                 </li>
                  <li>
                     <img src="./images/limitededition.jpg" width="370" height="295" alt="">
                     <h3 class="project-name">Издание Limited Edition</h3>
-                    <p class="deteils-text">Дизайн</p>
+                    <p class="project-text">Дизайн</p>
                 </li>
                 <li>
                     <img src="./images/projectlab.jpg" width="370" height="295" alt="">
                     <h3 class="project-name">Проект LAB</h3>
-                    <p class="deteils-text">Маркетинг</p>
+                    <p class="project-text">Маркетинг</p>
                 </li>
                  <li>
                     <img src="./images/busines.jpg" width="370" height="295" alt="">
                     <h3 class="project-name">Growing Business</h3>
-                    <p class="deteils-text">Приложение</p>
+                    <p class="project-text">Приложение</p>
                 </li>
             </ul>
         </section>
     </main>
     <footer class="footer">
-        <a  class="logo" href="#">WebStudio</a>
+        <a  class="logo" href="./index.html">Web<span class="logo-word3">Studio</span></a>
         <address class="address">
                 <ul>
                     <li><a class="map" href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858">пр-т Леси Украинки, 26</a></li>
