--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./CSS/styles.css">
 </head>
 <body class="body">
@@ -29,8 +32,8 @@
             <button class="button" type="button">Заказать услугу</button>
         </span>
         </section>
-        <h2 class="hide">Особености</h2>
         <section class="peculiarities">
+            <h2 class="hide">Особености</h2>
             <ul>
                 <li class="details">
                     <h3 class="peculiarities-title">Внимание к деталям</h3> 
