--- a/portfolio.html
+++ b/portfolio.html
@@ -55,57 +55,51 @@
                 </div> 
                 <div class="portfolio-projects">
                     <ul>
-                        <div class="box1">
+                        <li class="box">
+                            <img src="./images/web.jpg" width="370" height="295" alt="web">
+                            <h3 class="project-name">Технокряк</h3>
+                            <p class="project-text">Веб-сайт</p>
+                        </li>
+                        <li class="box">
+                            <img src="./images/poster.jpg" width="370" height="295" alt="poster">
+                            <h3 class="project-name">Постер New Orlean vs Golden Star</h3>
+                            <p class="project-text">Дизайн</p>
+                        </li>
+                        <li class="box">
+                            <img src="./images/logo.jpg" width="370" height="295" alt="logo">
+                            <h3 class="project-name">Ресторан Seafood</h3>
+                            <p class="project-text">Приложение</p>
+                        </li>
+                        <li class="box">
+                            <img src="./images/projectprime.jpg" width="370" height="295" alt="projectprime">
+                            <h3 class="project-name">Проект Prime</h3>
+                            <p class="project-text">Маркетинг</p>
+                        </li>
+                        <li class="box">
+                            <img src="./images/projectboxes.jpg" width="370" height="295" alt="projectboxes">
+                            <h3 class="project-name">Проект Boxes</h3>
+                            <p class="project-text">Приложение</p>
+                        </li>
+                        <li class="box">
+                            <img src="./images/multinational.jpg" width="370" height="295" alt="multinational">
+                            <h3 class="project-name">Inspiration has no Borders</h3>
+                            <p class="project-text">Веб-сайт</p>
+                        </li>
                             <li class="box">
-                                <img src="./images/web.jpg" width="370" height="295" alt="">
-                                <h3 class="project-name">Технокряк</h3>
-                                <p class="project-text">Веб-сайт</p>
+                            <img src="./images/limitededition.jpg" width="370" height="295" alt="limitededition">
+                            <h3 class="project-name">Издание Limited Edition</h3>
+                            <p class="project-text">Дизайн</p>
+                        </li>
+                        <li class="box">
+                            <img src="./images/projectlab.jpg" width="370" height="295" alt="projectlab">
+                            <h3 class="project-name">Проект LAB</h3>
+                            <p class="project-text">Маркетинг</p>
                             </li>
-                            <li class="box">
-                                <img src="./images/poster.jpg" width="370" height="295" alt="">
-                                <h3 class="project-name">Постер New Orlean vs Golden Star</h3>
-                                <p class="project-text">Дизайн</p>
-                            </li>
-                            <li class="box">
-                                <img src="./images/logo.jpg" width="370" height="295" alt="">
-                                <h3 class="project-name">Ресторан Seafood</h3>
-                                <p class="project-text">Приложение</p>
-                            </li>
-                        </div>
-                        <div class="box2">
-                            <li class="box">
-                                <img src="./images/projectprime.jpg" width="370" height="295" alt="">
-                                <h3 class="project-name">Проект Prime</h3>
-                                <p class="project-text">Маркетинг</p>
-                            </li>
-                            <li class="box">
-                                <img src="./images/projectboxes.jpg" width="370" height="295" alt="">
-                                <h3 class="project-name">Проект Boxes</h3>
-                                <p class="project-text">Приложение</p>
-                            </li>
-                            <li class="box">
-                                <img src="./images/multinational.jpg" width="370" height="295" alt="">
-                                <h3 class="project-name">Inspiration has no Borders</h3>
-                                <p class="project-text">Веб-сайт</p>
-                            </li>
-                        </div>
-                        <div class="box3">
-                            <li class="box">
-                                <img src="./images/limitededition.jpg" width="370" height="295" alt="">
-                                <h3 class="project-name">Издание Limited Edition</h3>
-                                <p class="project-text">Дизайн</p>
-                            </li>
-                            <li class="box">
-                                <img src="./images/projectlab.jpg" width="370" height="295" alt="">
-                                <h3 class="project-name">Проект LAB</h3>
-                                <p class="project-text">Маркетинг</p>
-                            </li>
-                            <li class="box">
-                                <img src="./images/busines.jpg" width="370" height="295" alt="">
-                                <h3 class="project-name">Growing Business</h3>
-                                <p class="project-text">Приложение</p>
-                            </li>
-                        </div>    
+                        <li class="box">
+                            <img src="./images/busines.jpg" width="370" height="295" alt="busines">
+                            <h3 class="project-name">Growing Business</h3>
+                            <p class="project-text">Приложение</p>
+                        </li>    
                     </ul>
                 </div>
             </div>
@@ -114,8 +108,8 @@
     <footer>
         <section>
             <div class="footer">
-            <div class="container">
-                <a class="logo" href="./index.html"><span class="logo-word1">Web</span><span class="logo-word3">Studio</span></a>
+                <div class="container">
+                    <a class="logo" href="./index.html"><span class="logo-word1">Web</span><span class="logo-word3">Studio</span></a>
                 <address class="address">
                     <ul>
                         <li><a class="map" href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858">пр-т Леси Украинки, 26</a></li>
@@ -123,8 +117,8 @@
                         <li><a class="contacts" href="tel:+380991111111">+38(099)111-11-11</a></li>
                     </ul>
                 </address>
+                </div>
             </div>
-        </div>
         </section>        
     </footer>
 </body>
