--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </header>
     <main>
         <section class="face">
-            <h1 class="title-text">ЕФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
+            <h1 class="title-text">ЕФФ  ЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
             <button class="button" type="button">Заказать услугу</button>
         </section>
         <section class="container">
@@ -100,7 +100,6 @@
         </div>
     </main>
     <footer>
-        <section>
             <div class="footer">
                 <div class="container">
                     <a class="logo" href="./index.html"><span class="logo-word1">Web</span><span class="logo-word3">Studio</span></a>
@@ -112,8 +111,7 @@
                     </ul>
                 </address>
                 </div>
-            </div>
-        </section>        
+            </div>        
     </footer>
 </body>
 </html>
