--- a/portfolio.html
+++ b/portfolio.html
@@ -53,8 +53,8 @@
                         </li>
                     </ul>
                 </div> 
-                <div class="portfolio-projects">
-                    <ul>
+                <div>
+                    <ul class="portfolio-projects-list">
                         <li class="box">
                             <img src="./images/web.jpg" width="370" height="295" alt="web">
                             <h3 class="project-name">Технокряк</h3>
@@ -106,7 +106,6 @@
         </section>
     </main>
     <footer>
-        <section>
             <div class="footer">
                 <div class="container">
                     <a class="logo" href="./index.html"><span class="logo-word1">Web</span><span class="logo-word3">Studio</span></a>
@@ -118,8 +117,7 @@
                     </ul>
                 </address>
                 </div>
-            </div>
-        </section>        
+            </div>        
     </footer>
 </body>
 </html>
