--- a/index.html
+++ b/index.html
@@ -35,9 +35,10 @@
             <h1 class="title-text">ЕФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
             <button class="button" type="button">Заказать услугу</button>
         </section>
-        <section class="container">
+        <section>
             <h2 class="hide">Особености</h2>
-            <ul class="peculiarities-boxes">
+            <div class="container">
+                <ul class="peculiarities-boxes">
                 <li class="box-peculiarities">
                     <h3 class="peculiarities-title">ВНИМАНИЕ К ДЕТАЛЯМ</h3> 
                     <p class="peculiarities-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
@@ -55,6 +56,7 @@
                     <p class="peculiarities-text">Значимость этих проблем настолько очевидна, что реализация планових заданий.</p>
                 </li>
             </ul>
+        </div>
         </section>
         <section>
             <div class="container">
@@ -75,23 +77,31 @@
                 <ul >
                     <li class="employee">
                         <img src="./images/igor.jpg" width="270" height="260" alt="Игорь Демьяненко">
-                        <h3 class="name">Игорь Демьяненко</h3>
-                        <p class="position">Product Designer</p>
+                        <div class="text-employee-container">
+                            <h3 class="name">Игорь Демьяненко</h3>
+                            <p class="position">Product Designer</p>
+                        </div>
                     </li>
                     <li class="employee">
                         <img src="./images/olga.jpg" width="270" height="260" alt="Ольга Репина">
+                    <div class="text-employee-container">
                         <h3 class="name">Ольга Репина</h3>
                         <p class="position">Frontend Developer</p>
+                    </div>
                     </li>
                     <li class="employee">
                         <img src="./images/nikolaj.jpg" width="270" height="260" alt="Николай Тарасов">
+                    <div class="text-employee-container">
                         <h3 class="name">Николай Тарасов</h3>
                         <p class="position">Marketing</p>
+                    </div>
                     </li>
                     <li class="employee">
                         <img src="./images/mikhail.jpg" width="270" height="260" alt="Михаил Ермаков">
+                    <div class="text-employee-container">
                         <h3 class="name">Михаил Ермаков</h3>
                         <p class="position">UI Designer</p>
+                    </div>
                     </li>   
                 </ul>
                 </div>
