--- a/index.html
+++ b/index.html
@@ -81,27 +81,85 @@
                             <h3 class="name">Игорь Демьяненко</h3>
                             <p class="position">Product Designer</p>
                         </div>
-                    </li>
+                        <ul>
+                            <li>
+                                <a class="inst-source" href="https://www.instagram.com/">
+                                    <svg class="instagram-icon-1" width="20" height="20" ><use href="./images/svg#icon-instagram-1"></use></svg>
+                                </a>
+                            </li>
+                            <li>
+
+                            </li>
+                            <li>
+
+                            </li>
+                            <li>
+
+                            </li>
+                            </ul>
+                   </li>
                     <li class="employee">
                         <img src="./images/olga.jpg" width="270" height="260" alt="Ольга Репина">
-                    <div class="text-employee-container">
-                        <h3 class="name">Ольга Репина</h3>
-                        <p class="position">Frontend Developer</p>
+                        <div class="text-employee-container">
+                            <h3 class="name">Ольга Репина</h3>
+                            <p class="position">Frontend Developer</p>
+                            <ul>
+                                <li>
+
+                                </li>
+                                <li>
+
+                                </li>
+                                <li>
+
+                                </li>
+                                <li>
+
+                                </li>
+                            </ul>
                     </div>
                     </li>
                     <li class="employee">
                         <img src="./images/nikolaj.jpg" width="270" height="260" alt="Николай Тарасов">
-                    <div class="text-employee-container">
-                        <h3 class="name">Николай Тарасов</h3>
-                        <p class="position">Marketing</p>
+                        <div class="text-employee-container">
+                            <h3 class="name">Николай Тарасов</h3>
+                            <p class="position">Marketing</p>
+                            <ul>
+                                <li>
+
+                                </li>
+                                <li>
+                                    
+                                </li>
+                                <li>
+
+                                </li>
+                                <li>
+
+                                </li>
+                            </ul>
                     </div>
                     </li>
                     <li class="employee">
                         <img src="./images/mikhail.jpg" width="270" height="260" alt="Михаил Ермаков">
-                    <div class="text-employee-container">
-                        <h3 class="name">Михаил Ермаков</h3>
-                        <p class="position">UI Designer</p>
-                    </div>
+                        <div class="text-employee-container">
+                            <h3 class="name">Михаил Ермаков</h3>
+                            <p class="position">UI Designer</p>
+                            <ul>
+                                <li>
+
+                                </li>
+                                <li>
+
+                                </li>
+                                <li>
+
+                                </li>
+                                <li>
+
+                                </li>
+                            </ul>
+                        </div>
                     </li>   
                 </ul>
                 </div>
