--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="container">
                 <div class="our-team-container">
                 <h2 class="our-team">Наша команда</h2>
-                <ul >
+                <ul class="employee-list">
                     <li class="employee">
                         <img src="./images/igor.jpg" width="270" height="260" alt="Игорь Демьяненко">
                         <div class="text-employee-container">
@@ -82,9 +82,11 @@
                             <p class="position">Product Designer</p>
                         </div>
                         <ul>
-                            <li>
+                            <li class="employee-item">
                                 <a class="inst-source" href="https://www.instagram.com/">
-                                    <svg class="instagram-icon-1" width="20" height="20" ><use href="./images/svg#icon-instagram-1"></use></svg>
+                                    <svg class="instagram-icon-1" width="20" height="20" >
+                                        <use href="./images/svg/icons.svg#icon-instagram-1"></use>
+                                    </svg>
                                 </a>
                             </li>
                             <li>
