--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                             <li class="employee-item">
                                 <a class="inst-source" href="https://www.instagram.com/">
                                     <svg class="instagram-icon-1">
-                                        <use href="./images/SVG/icons.svg#icon-instagram"></use>
+                                        <use href=""></use>
                                     </svg>
                                 </a>
                             </li>
