changed my 4th homework

--- a/index.html
+++ b/index.html
@@ -267,42 +267,42 @@
                 <div class="logo-list">               
                     <ul class="clients-list">
                         <li class="client-logo-item">
-                            <a href="#">
+                            <a class="client-logo-link" href="#">
                                 <svg class="client-logo-icon">
                                     <use href="./images/svg/icons.svg#icon-group-yaco"></use>
                                 </svg>
                             </a>                           
                         </li>
                         <li class="client-logo-item">
-                            <a href="#">
+                            <a class="client-logo-link" href="#">
                                 <svg class="client-logo-icon">
                                     <use href="./images/svg/icons.svg#icon-group-tagline-here"></use>
                                 </svg>
                             </a>                            
                         </li>
                         <li class="client-logo-item">
-                            <a href="#">
+                            <a class="client-logo-link" href="#">
                                 <svg class="client-logo-icon">
                                     <use href="./images/svg/icons.svg#icon-group-company"></use>
                                 </svg>
                             </a>                            
                         </li>
                         <li class="client-logo-item">
-                            <a href="#">
+                            <a class="client-logo-link" href="#">
                                 <svg class="client-logo-icon">
                                     <use href="./images/svg/icons.svg#icon-group-foster-peters"></use>
                                 </svg>
                             </a>                            
                         </li>
                         <li class="client-logo-item">
-                            <a href="#">
+                            <a class="client-logo-link" href="#">
                                 <svg class="client-logo-icon">
                                     <use href="./images/svg/icons.svg#icon-group-brand"></use>
                                 </svg>
                             </a>                            
                         </li>
                         <li class="client-logo-item">
-                            <a href="#">
+                            <a class="client-logo-link" href="#">
                                 <svg class="client-logo-icon">
                                     <use href="./images/svg/icons.svg#icon-group-tag-line"></use>
                                 </svg>
