Changed my 4'th homework

--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
                     </div>
                 <div class="social-links">
                     <div class="footer-container2">
-                        <p class="social-links-text">Присоединяйтесь</p>
+                        <p class="social-links-text">ПРИСОЕДИНЯЙТЕСЬ</p>
                     <ul>
                         <li class="social-link-icon-item">
                             <a class="inst-link-icon" href="">
