--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
             </div>
             </div>        
     </footer>
-<div class="backdrop is-hidden" data-modal>
+<div class="modal-container is-hidden" data-modal>
     <div class="modal">
         <button type="button" class="close-button" data-modal-close>
             <svg class="close-button-icon">
