Chsnged my 5`th H/W

--- a/index.html
+++ b/index.html
@@ -18,9 +18,13 @@
                 <a class="logo" href="./index.html"><span class="logo-word1">Web</span><span class="logo-word2">Studio</span></a>
                 <nav class="pages-body">
                     <ul>
-                        <li class="pages"><a href="./index.html">Студия</a></li>
-                        <li class="pages"><a href="./portfolio.html">Портфолио</a></li>
-                        <li class="pages"><a href="#">Контакти</a></li>
+                        <li class="pages">
+                            <a href="./index.html">Студия<div class="overlay-border"></div></a>
+                        </li>
+                        <li class="pages"><a href="./portfolio.html">Портфолио<div class="overlay-border second"></div></a>
+                        </li>
+                        <li class="pages"><a href="#">Контакти<div class="overlay-border third"></div></a>
+                        </li>
                     </ul>    
                 </nav>       
                     <ul class="info-body">
